Update Blog “2018-09-14-test”

--- a/src/pages/blog/2018-09-14-test.md
+++ b/src/pages/blog/2018-09-14-test.md
@@ -2,8 +2,12 @@
 templateKey: blog-post
 title: Benvinguts al blog
 date: '2018-09-24T12:26:12+02:00'
-description: '[BREU DESCRIPCIÓ DEL BLOG]'
+description: A partir d'avui aniré publicant articles mensualment.
 tags:
-  - ''
+  - general
 ---
-\[CONTINGUT]
+Aquesta primera entrada és només per a donar-vos la benvinguda i fer les primeres proves així doncs...
+
+```
+console.log('Hello, world!');
+```
