content: update about page

--- a/content/archive/about_CAT/index.mdx
+++ b/content/archive/about_CAT/index.mdx
@@ -4,33 +4,31 @@ coverImg: p1030836_edited.jpeg
 ---
 
 export const pageMeta = {
-  title: 'A little bit about me',
-};
+  title: 'A little bit about me'
+}
 
 import { graphql } from 'gatsby';
 import { Helmet } from 'react-helmet';
 
 My name is Oriol Casto Arnau and I'm a front-end developer. I'm living in a beautiful Mediterranean small city called Vilanova i la Geltrú near Barcelona but I'm fully connected to the world.
+Em dic Oriol Castro Arnau i sóc programador web, actualment ubicat a Vilanova i la Geltrú però connectat amb el món.
 
-I have been always interested in everything related to technology and how it can change the way we live. Three years ago I decided to make a turn in my career and become a full-time professional developer.
+Des de sempre m'ha interessat tot allò relacionat amb les "noves tecnologies", especialment les vinculades a Internet, i com aquestes estaven canviant la nostra forma de viure. Actualment ajudo empreses i organitzacions a no quedar-se enrere i aprofitar les possibilitats existents per transformar-se des de [OK! Studio](https://www.okstudio.tech/).
 
-These are the beacons that led me, and still do, through my journey.
+### Fer-ho fàcil
 
-### Make it easy
+Sempre m'ha apassionat conèixer com funcionava tot el que m'envoltava i trobar la millor solució als problemes, és per això que em vaig fer enginyer.
 
-The understanding of how things work and the desire to find the best possible solution to a problem is a great fuel for exploration. That's why I became an engineer.
+- Màster en Ciència i Tecnologia Aeroespacial 2011 - 2014
+- Enginyeria Tècnica Aeronàutica esp. Aeronavegació 2005 - 2009
 
-- Master's Degree in Aerospace Science and Technology 2011 - 2014
-- Aeronautical Technical Engineering esp. Aircraft navigation 2005 - 2009
+La curiositat m'ha dut a explorar nous camps i a continuar adquirint coneixements i habilitats. En els últims anys he decidit pivotar la meva carrera professional cap a la programació web _front-end_. La formació en línia i el bast coneixement accessible a través de la xarxa m'ha permès fer-ho realitat. En aquests mesos d'autoaprenentatge he centrat la meva atenció especialment en:
 
-After college and reflecting on where my path was leading me I decided to make a 42-degree turn and become a web developer. I consider myself a product-centric engineer so it made sense to put the focus in the web dev area closer to the final user, the _front-end_. With dedication and thanks to the vast online resources available nowadays I have been able to grow my knowledge stack:
+- L'ecosistema [Reactjs](https://reactjs.org) a través del generador d'apps i webs [Gatsbyjs](https://www.gatsbyjs.org/).
+- El llenguatge [GraphQL](https://graphql.org/) i la seva implementació en el client i servidor.
+- El disseny _responsive_ i _mobile-first_ a través de diferents _frameworks_ com [Bulma](https://bulma.io/), [Material-UI](https://material-ui.com/), [Semantic-UI](https://semantic-ui.com/) o [Styled Components.](https://www.styled-components.com/)
 
-- The ecosystem of [Reactjs](https://reactjs.org) and the component-based aproach to build web applications.
-- Metaframeworks like [Gatsbyjs](https://www.gatsbyjs.org/) or [Next.js](https://nextjs.org/) and the architecture of modern web.
-- Client-server communication using both REST and [GraphQL](https://graphql.org/) APIs for the data layer.
-- _Responsive_ and _mobile-first_ design using pure CSS, libraries that leverage SASS like [Bulma](https://bulma.io/), [Material-UI](https://material-ui.com/) or [Semantic-UI](https://semantic-ui.com/), or developing a custom components library using [Styled Components](https://www.styled-components.com/) and [Styled System.](https://styled-system.com/)
-
-### Do it together
+### Fer-ho junts
 
 En paral·lel al desenvolupament de la meva carrera professional sempre he tingut clara la importància de participar de projectes socials col·lectius. És per això que he procurat mantenir una vida associativa molt activa.
 
