--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -10,7 +10,7 @@ export const pageMeta = {
 import { graphql } from 'gatsby';
 import { Helmet } from 'react-helmet';
 
-My name is Oriol Casto Arnau and I'm a front-end developer. I'm living in a beautiful Mediterranean small city called Vilanova i la Geltrú near Barcelona but I'm fully connected to the world.
+My name is Oriol Casto Arnau and I'm a front-end developer living in a beautiful Mediterranean small city called Vilanova i la Geltrú near Barcelona and fully connected to the world.
 
 I have been always interested in everything related to technology and how it can change the way we live. Three years ago I decided to make a turn in my career and become a full-time professional developer.
 
@@ -28,26 +28,23 @@ After college and reflecting on where my path was leading me I decided to make a
 - The ecosystem of [Reactjs](https://reactjs.org) and the component-based aproach to build web applications.
 - Metaframeworks like [Gatsbyjs](https://www.gatsbyjs.org/) or [Next.js](https://nextjs.org/) and the architecture of modern web.
 - Client-server communication using both REST and [GraphQL](https://graphql.org/) APIs for the data layer.
-- _Responsive_ and _mobile-first_ design using pure CSS, libraries that leverage SASS like [Bulma](https://bulma.io/), [Material-UI](https://material-ui.com/) or [Semantic-UI](https://semantic-ui.com/), or developing a custom components library using [Styled Components](https://www.styled-components.com/) and [Styled System.](https://styled-system.com/)
+- _Responsive_ and _mobile-first_ design using pure CSS, libraries like [Bulma](https://bulma.io/), [Material-UI](https://material-ui.com/) or [Semantic-UI](https://semantic-ui.com/), or developing a custom components library using [Styled Components](https://www.styled-components.com/) and [Styled System.](https://styled-system.com/)
 
 ### Do it together
 
-En paral·lel al desenvolupament de la meva carrera professional sempre he tingut clara la importància de participar de projectes socials col·lectius. És per això que he procurat mantenir una vida associativa molt activa.
+Aside of developing a carrer I have always considered that as a citizen is very important to be involved in some form of social activism.
+From my time in the _free time educational movement (Esplais)_ with [Drac Màgic](http://dracmagic.org/) first and as part of the board of [Esplais Catalans](http://esplac.cat/) later, and also as an active member of [La Unió Vilanovina](http://www.launiovilanovina.cat/) I have achieved some key abilities that I use now in my professional career.
 
-Del meu pas per l'esplai [Drac Màgic](http://dracmagic.org/), dels anys com a dirigent d'[Esplais Catalans](http://esplac.cat/) i de l'etapa actual al capdavant de [La Unió Vilanovina](http://www.launiovilanovina.cat/) m'enduc tota una sèrie d'habilitats i capacitats que mai hagués aconseguit a la Universitat.
+- The **teamwork** spirit as a must.
+- The ability to **communicate effectively**.
+- The tools for an **effective leadership**.
+- The importance of **commitment** and to **bond** with the project.
 
-- La capacitat per **treball en equip**.
-- L'habilitat de **comunicar**-me de forma efectiva.
-- Les eines per exercir un **lideratge** efectiu.
-- La importància del **compromís** i la **responsabilitat** amb el projecte.
+### Do it right!
 
-### Fer-ho bé!
+You can find me in my social networks as @oriolcastro_ or write me to the email <mailto:uri@oriolcastro.me>
 
-Aquest blog vol ser un espai per a publicar articles sobre els projectes personals que engegui, sobre l'avanç de la tecnologia i la seva vinculació amb la transformació social, així com per difondre coneixement i explorar noves oportunitats.
-
-Podeu contactar amb mi a través de les xarxes socials amb l'usuari @oriolcastro\_ o al correu electrònic <mailto:uri@oriolcastro.me>.
-
-Per a projectes professionals visiteu la web de [OK! Studio](https://www.okstudio.tech/) o escriviu a <mailto:hola@okstudio.tech>.
+At the moment I don't take freelancing projects in [OK! Studio](https://www.okstudio.tech/) as I'm working full time in [Xceed](https://xceed.me).
 
 export const aboutPageQuery = graphql`
   query About {
