fix: mark articles not translated

--- a/content/blog/2018-12-12-projecte-1-desembre-repte6by6/index.mdx
+++ b/content/blog/2018-12-12-projecte-1-desembre-repte6by6/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Disseny del projecte #1 Desembre - Repte6by6'
+title: '[CAT] Disseny del projecte #1 Desembre - Repte6by6'
 date: 2018-12-13T08:30:13.172Z
 description: >-
   Resum de les dues primeres setmanes de feina en el projecte d'aquest mes del
@@ -15,6 +15,8 @@ tags:
   - GraphQL
   - Front end
 ---
+> This article is not yet translated to english
+
 > Avís: aquest serà un article bastant tècnic en alguns dels seus punts.
 
 Durant el mes de novembre vaig iniciar el repte 6by6 on em proposava dissenyar, desenvolupar i publicar un projecte web cada mes durant els següents 6 mesos. ([+info](/blog/2018-11-05-el-repte-6by6/)). Per tal de decidir quin projecte portava a la pràctica, compartiria a les xarxes socials i amb el meu entorn les diferents idees. Això em serviria per captar el seu possible impacte, rebre propostes de millora, o comentaris que m'ajudessin a donar-li forma.
