--- a/content/blog/2019-01-10-disseny-del-projecte-2-gener-repte6by6/index.mdx
+++ b/content/blog/2019-01-10-disseny-del-projecte-2-gener-repte6by6/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Disseny del projecte #2 Gener - Repte6by6'
+title: '[CAT] Disseny del projecte #2 Gener - Repte6by6'
 date: 2019-01-12T12:05:08.431Z
 description: >-
   Resum de la primera setmana amb el nou projecte del Repte 6by6. Força més
@@ -14,6 +14,7 @@ tags:
   - Projectes
   - Carnaval
 ---
+> This article is not yet translated to english
 
 > Avís: aquest serà un article bastant tècnic en alguns dels seus punts.
 
