--- a/content/blog/2018-09-26-benvinguts-al-blog/index.mdx
+++ b/content/blog/2018-09-26-benvinguts-al-blog/index.mdx
@@ -1,11 +1,13 @@
 ---
-title: Benvinguts al blog!
+title: '[CAT] Benvinguts al blog!'
 date: 2018-09-26T10:11:57.650Z
 description: A partir d'avui aniré publicant articles mensualment.
 coverImg: ''
 tags:
   - general
 ---
+> This article is not yet translated to english
+
 Aquesta primera entrada és només per a donar-vos la benvinguda i fer les primeres proves així doncs...
 
 ```js
