fix: improve SEO

--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -5,13 +5,10 @@ coverImg: p1030836_edited.jpeg
 
 export const pageMeta = {
   title: 'A little bit about me',
-  description: 'A quick introduction into my jounry and who am I'
+  description: 'A quick introduction into my journy and who am I'
 };
 
 import { graphql } from 'gatsby';
-import SEO from '@components/SEO';
-
-<SEO title={pageMeta.title} desription={pageMeta.description} pathname="/about" image={frontmatter.coverImg} />
 
 My name is Oriol Casto Arnau and I'm a front-end developer living in a beautiful Mediterranean small city called Vilanova i la Geltrú near Barcelona and fully connected to the world.
 
@@ -57,6 +54,9 @@ export const aboutPageQuery = graphql`
           childImageSharp {
             fluid(maxWidth: 1400, maxHeight: 700) {
               ...GatsbyImageSharpFluid_withWebp_tracedSVG
+            }
+            original: fluid{
+              src
             }
           }
         }
