feat: add new attributs to article frontmatter
- use isFeatured to filter in homepage
- use status to filter in homepage and blog
- prepare for draft and archived status handling

--- a/content/blog/2018-09-26-benvinguts-al-blog/index.mdx
+++ b/content/blog/2018-09-26-benvinguts-al-blog/index.mdx
@@ -5,6 +5,8 @@ description: A partir d'avui aniré publicant articles mensualment.
 coverImg: ''
 tags:
   - general
+status: 'published'
+isFeatured: false
 ---
 > This article is not yet translated to english
 
