--- a/content/blog/2018-11-05-el-repte-6by6/index.mdx
+++ b/content/blog/2018-11-05-el-repte-6by6/index.mdx
@@ -9,6 +9,8 @@ coverImg: heroimage_challenge.jpg
 tags:
   - 6by6
   - projecte
+status: 'published'
+isFeatured: false
 ---
 > This article is not yet translated to english
 
