--- a/content/blog/2019-01-02-projecte-1-desembre-repte6by6-resultat/index.mdx
+++ b/content/blog/2019-01-02-projecte-1-desembre-repte6by6-resultat/index.mdx
@@ -13,6 +13,8 @@ tags:
   - JAMstack
   - GraphQL
   - Front end
+status: 'published'
+isFeatured: false
 ---
 > This article is not yet translated to english
 
