--- a/content/blog/2018-12-12-projecte-1-desembre-repte6by6/index.mdx
+++ b/content/blog/2018-12-12-projecte-1-desembre-repte6by6/index.mdx
@@ -14,6 +14,8 @@ tags:
   - JAMstack
   - GraphQL
   - Front end
+status: 'published'
+isFeatured: false
 ---
 > This article is not yet translated to english
 
