--- a/content/blog/2019-01-10-disseny-del-projecte-2-gener-repte6by6/index.mdx
+++ b/content/blog/2019-01-10-disseny-del-projecte-2-gener-repte6by6/index.mdx
@@ -13,6 +13,8 @@ tags:
   - JAMStack
   - Projectes
   - Carnaval
+status: 'published'
+isFeatured: false
 ---
 > This article is not yet translated to english
 
